--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,70 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# ===============================
+# Node
+# ===============================
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
+.pnpm-store/
 
-# env files (can opt-in for committing if needed)
-.env*
+# ===============================
+# Next.js
+# ===============================
+.next/
+out/
+build/
+.vercel/
 
-# vercel
-.vercel
+# ===============================
+# Environment Variables
+# ===============================
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# typescript
+# ===============================
+# Prisma
+# ===============================
+prisma/migrations/
+prisma/dev.db
+prisma/dev.db-journal
+*.db
+*.db-journal
+
+# ===============================
+# Logs
+# ===============================
+logs
+*.log
+
+# ===============================
+# OS Files
+# ===============================
+.DS_Store
+Thumbs.db
+
+# ===============================
+# IDE / Editor
+# ===============================
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# ===============================
+# TypeScript
+# ===============================
 *.tsbuildinfo
-next-env.d.ts
+
+# ===============================
+# Coverage / Testing
+# ===============================
+coverage/
+
+# ===============================
+# Misc
+# ===============================
+*.pem
