--- a/package.json
+++ b/package.json
@@ -15,8 +15,16 @@
     "@openrouter/ai-sdk-provider": "^2.2.3",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@rive-app/react-webgl2": "^4.27.0",
+    "@streamdown/cjk": "^1.0.2",
+    "@streamdown/code": "^1.0.2",
+    "@streamdown/math": "^1.0.2",
+    "@streamdown/mermaid": "^1.0.2",
     "@tanstack/react-query": "^5.90.21",
+    "@xyflow/react": "^12.10.0",
     "ai": "^6.0.86",
+    "ansi-to-react": "^6.2.6",
     "better-auth": "^1.4.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -25,6 +33,9 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.563.0",
+    "media-chrome": "^4.17.2",
+    "motion": "^12.34.0",
+    "nanoid": "^5.1.6",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "pg": "^8.18.0",
@@ -34,10 +45,15 @@
     "react-day-picker": "^9.13.2",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
+    "react-jsx-parser": "^2.4.1",
     "react-resizable-panels": "^4.6.2",
     "recharts": "^2.15.4",
+    "shiki": "^3.22.0",
     "sonner": "^2.0.7",
+    "streamdown": "^2.2.0",
     "tailwind-merge": "^3.4.0",
+    "tokenlens": "^1.3.1",
+    "use-stick-to-bottom": "^1.1.3",
     "vaul": "^1.1.2",
     "zod": "^4.3.6",
     "zustand": "^5.0.11"
